@@ -21,7 +21,7 @@
     <groupId>com.expediagroup.beans</groupId>
     <artifactId>bean-utils-library-parent</artifactId>
     <url>https://github.com/ExpediaGroup/bull</url>
-    <version>2.0.0-jdk11</version>
+    <version>2.0.1-jdk11</version>
     <packaging>pom</packaging>
     <inceptionYear>2019</inceptionYear>
     <description>
@@ -34,7 +34,7 @@
     <parent>
         <groupId>com.expediagroup</groupId>
         <artifactId>eg-oss-parent</artifactId>
-        <version>2.3.2</version>
+        <version>2.4.1</version>
     </parent>
 
     <modules>
@@ -50,16 +50,17 @@
         <jdk.version>11</jdk.version>
         <maven.compiler.source>${jdk.version}</maven.compiler.source>
         <maven.compiler.target>${jdk.version}</maven.compiler.target>
-        <lombok.version>1.18.20</lombok.version>
+        <lombok.version>1.18.22</lombok.version>
         <apache.commons-lang3.version>3.12.0</apache.commons-lang3.version>
         <!-- testing dependencies -->
-        <mockito-core.version>3.11.2</mockito-core.version>
+        <mockito-core.version>4.0.0</mockito-core.version>
         <testng.version>7.4.0</testng.version>
-        <assertj-core.version>3.20.2</assertj-core.version>
+        <assertj-core.version>3.21.0</assertj-core.version>
         <!-- validation dependencies -->
         <hibernate-validator.version>7.0.1.Final</hibernate-validator.version>
+        <jboss-logging.version>3.4.2.Final</jboss-logging.version>
         <slf4j-api.version>1.7.32</slf4j-api.version>
-        <glassfish.jakarta.el.version>4.0.1</glassfish.jakarta.el.version>
+        <glassfish.jakarta.el.version>4.0.2</glassfish.jakarta.el.version>
         <!-- JaCoCo & Sonar properties -->
         <jacoco.version>0.8.7</jacoco.version>
         <jacoco.classRatio>1.0</jacoco.classRatio>
@@ -80,11 +81,10 @@
         <!-- build settings -->
         <maven.required.version>[3.8.1,)</maven.required.version>
         <maven.gpg.plugin.version>3.0.1</maven.gpg.plugin.version>
-        <maven.javadoc-plugin.version>3.3.0</maven.javadoc-plugin.version>
+        <maven.javadoc-plugin.version>3.3.1</maven.javadoc-plugin.version>
         <maven.checkstyle.plugin.version>3.1.2</maven.checkstyle.plugin.version>
         <maven.versions.plugin.version>2.8.1</maven.versions.plugin.version>
-        <puppycrawl.checkstyle.version>8.44</puppycrawl.checkstyle.version>
-        <maven.spotless.plugin.version>2.12.2</maven.spotless.plugin.version>
+        <puppycrawl.checkstyle.version>9.0.1</puppycrawl.checkstyle.version>
         <maven.release.plugin.version>3.0.0-M4</maven.release.plugin.version>
         <maven.nexus-staging.plugin.version>1.6.8</maven.nexus-staging.plugin.version>
         <maven.project.info.reports.plugin.version>3.1.2</maven.project.info.reports.plugin.version>
@@ -98,9 +98,10 @@
         <test.coverage.check.skip>false</test.coverage.check.skip>
         <pmd.check.skip>true</pmd.check.skip>
         <javadoc.skip>false</javadoc.skip>
-        <import.order>\#java,\#javax,\#jakarta,\#org,\#,\#com,,\#lombok,java,javax,jakarta,org,,com,,lombok
-        </import.order>
-        <spotless.maven.plugin.skip>false</spotless.maven.plugin.skip>
+        <spotless.config.import.order.def>
+            \#java,\#javax,\#jakarta,\#org,\#,\#com,\#com.expedia,\#com.expediagroup,\#com.hotels,,\#lombok,java,javax,jakarta,org,,com,com.expedia,com.expediagroup,com.hotels,lombok
+        </spotless.config.import.order.def>
+        <spotless.config.execution.skip>false</spotless.config.execution.skip>
     </properties>
 
     <!-- distribution configuration -->
@@ -108,7 +109,7 @@
         <connection>scm:git:git@github.com:ExpediaGroup/bull.git</connection>
         <developerConnection>scm:git:git@github.com:ExpediaGroup/bull.git</developerConnection>
         <url>https://github.com/ExpediaGroup/bull</url>
-        <tag>2.0.0-jdk11</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
@@ -142,6 +143,11 @@
                 <groupId>org.hibernate.validator</groupId>
                 <artifactId>hibernate-validator</artifactId>
                 <version>${hibernate-validator.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.logging</groupId>
+                <artifactId>jboss-logging</artifactId>
+                <version>${jboss-logging.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.glassfish</groupId>
@@ -229,7 +235,7 @@
                 <checkstyle.includeTestSourceDirectory>false</checkstyle.includeTestSourceDirectory>
                 <test.coverage.check.skip>true</test.coverage.check.skip>
                 <javadoc.skip>true</javadoc.skip>
-                <spotless.maven.plugin.skip>true</spotless.maven.plugin.skip>
+                <spotless.config.execution.skip>true</spotless.config.execution.skip>
             </properties>
             <build>
                 <plugins>
@@ -251,7 +257,7 @@
             <properties>
                 <checkstyle.check.skip>true</checkstyle.check.skip>
                 <checkstyle.includeTestSourceDirectory>false</checkstyle.includeTestSourceDirectory>
-                <spotless.maven.plugin.skip>true</spotless.maven.plugin.skip>
+                <spotless.config.execution.skip>true</spotless.config.execution.skip>
                 <test.coverage.check.skip>true</test.coverage.check.skip>
             </properties>
             <build>
@@ -264,7 +270,6 @@
                             <excludes>
                                 <exclude>**/PerformanceTest.java</exclude>
                             </excludes>
-                            <argLine>@{argLine} --enable-preview</argLine>
                         </configuration>
                     </plugin>
                     <plugin>
@@ -284,7 +289,7 @@
             <id>compatibility-mode</id>
             <properties>
                 <javadoc.skip>true</javadoc.skip>
-                <spotless.maven.plugin.skip>true</spotless.maven.plugin.skip>
+                <spotless.config.execution.skip>true</spotless.config.execution.skip>
             </properties>
             <build>
                 <plugins>
@@ -309,7 +314,7 @@
                 <checkstyle.includeTestSourceDirectory>false</checkstyle.includeTestSourceDirectory>
                 <test.coverage.check.skip>true</test.coverage.check.skip>
                 <javadoc.skip>true</javadoc.skip>
-                <spotless.maven.plugin.skip>true</spotless.maven.plugin.skip>
+                <spotless.config.execution.skip>true</spotless.config.execution.skip>
             </properties>
             <build>
                 <plugins>
@@ -755,30 +760,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-            </plugin>
-            <!-- code formatter -->
-            <plugin>
-                <groupId>com.diffplug.spotless</groupId>
-                <artifactId>spotless-maven-plugin</artifactId>
-                <version>${maven.spotless.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <phase>process-sources</phase>
-                        <goals>
-                            <goal>apply</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <skip>${spotless.maven.plugin.skip}</skip>
-                    <java>
-                        <removeUnusedImports />
-                        <trimTrailingWhitespace />
-                        <importOrder>
-                            <order>${import.order}</order>
-                        </importOrder>
-                    </java>
-                </configuration>
             </plugin>
         </plugins>
     </build>
